# algebra
add_subdirectory(Algebra.[1].E.S.Golod)
add_subdirectory(Algebra.[3].E.S.Golod)
add_subdirectory(Algebra.[3].V.N.Latyshev)

# exam programs
add_subdirectory(EP.Algebra.[1].A.L.Shmelkin)
add_subdirectory(EP.Algebra.[3].E.B.Vinberg)
add_subdirectory(EP.Algebra.[1.3].E.S.Golod)
add_subdirectory(EP.Algebra.[1.3].V.N.Latyshev)

add_subdirectory(EP.Linear.Algebra.[2].E.B.Vinberg)
add_subdirectory(EP.Linear.Algebra.[2].E.G.Sklyarenko)
add_subdirectory(EP.Linear.Algebra.[2].M.V.Zaytsev)
add_subdirectory(EP.Linear.Algebra.[2].V.M.Manuilov)
add_subdirectory(EP.Linear.Algebra.[2].V.V.Fedorchuk)

# linear algebra
add_subdirectory(Linear.Algebra.[2].E.B.Vinberg)

# problems
add_subdirectory(PR.Algebra.[3].I.V.Arzhantsev)
add_subdirectory(PR.Linear.Algebra.[2].I.A.Dynnikov)

# sk
add_subdirectory(EP.Alg.Geometry.and.Inv.Theory.Sem.[S].D.A.Timashev,I.V.Arjantsev)
add_subdirectory(EP.Lie.Groups.[S].E.B.Vinberg)
add_subdirectory(EP.Symmetric.Spaces.[S].E.B.Vinberg)
add_subdirectory(EP.Reflection.Groups.[S].E.B.Vinberg)