add_subdirectory(Golod.E.S)
add_subdirectory(Sklyarenko.E.G)
add_subdirectory(Vinberg.E.B)
add_subdirectory(Algebra.[3].V.N.Latyshev)
add_subdirectory(EP.Algebra.[1.3].E.S.Golod)
add_subdirectory(EP.Algebra.[1.3].V.N.Latyshev)
add_subdirectory(EP.Algebra.[1].A.L.Shmelkin)
add_subdirectory(EP.Algebraic.Geometry.and.Invariant.Theory.[S].I.V.Arjantsev)
add_subdirectory(EP.Alg.Geometry.and.Inv.Theory.Sem.[S].D.A.Timashev,I.V.Arjantsev)
add_subdirectory(EP.Linear.Algebra.[2].M.V.Zaytsev)
add_subdirectory(EP.Linear.Algebra.[2].V.M.Manuilov)
add_subdirectory(EP.Linear.Algebra.[2].V.V.Fedorchuk)
add_subdirectory(Group.Theory.[S].A.A.Klyachko)
add_subdirectory(Linear.Algebra.[2].M.V.Zaytsev)
add_subdirectory(PR.Algebra.[3].I.V.Arzhantsev)
add_subdirectory(PR.Linear.Algebra.[2].I.A.Dynnikov)
