add_subdirectory(Approximation.Theory.[S].A.M.Sedletsky)

add_subdirectory(Calculus.[2.3.4].S.A.Telyakovsky)
add_subdirectory(Calculus.[2].T.P.Lukashenko)
add_subdirectory(Calculus.[2.3.4].V.I.Gavrilov)
add_subdirectory(Calculus.[3.4].V.E.Podolsky)

add_subdirectory(EP.Calculus.[1.2.3.4].A.M.Sedletsky)
add_subdirectory(EP.Calculus.[1.2.3.4].S.A.Telyakovsky)
add_subdirectory(EP.Calculus.[1.2.3.4].T.P.Lukashenko)
add_subdirectory(EP.Calculus.[2].V.I.Gavrilov)
add_subdirectory(EP.Calculus.[3].V.A.Zorich)

add_subdirectory(PR.Calculus.[2.3].A.K.Rybnikov)
add_subdirectory(PR.Calculus.[1].V.N.Chubarikov)
add_subdirectory(PR.Calculus.[3].R.N.Boyarinov)

add_subdirectory(SUP.Calculus.[2].T.P.Lukashenko)
