add_subdirectory(EP.Functional.Calculus.[5.6].A.M.Stepin)
add_subdirectory(EP.Functional.Calculus.[5.6].V.V.Ryzhikov)
add_subdirectory(EP.Functional.Calculus.[5.6].V.I.Bogachev)
add_subdirectory(EP.Functional.Calculus.[5.6].A.Ya.Helemsky)
add_subdirectory(PR.Functional.Calculus.[5.6].I.A.Sheipak)
add_subdirectory(Functional.Calculus.[5.6].A.M.Stepin)
add_subdirectory(Functional.Calculus.[5.6].O.G.Smolyanov)
add_subdirectory(Functional.Calculus.[5].V.V.Ryzhikov)
add_subdirectory(Differential.Operators.Spectral.Theory.[S].A.I.Aptekarev,V.N.Sorokin)
